# napari-stracking

./: .buildinfo  README.md  about.html  description.html  developers.html  genindex.html  guide.html  help.html  index.html  main.py  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: sphinx.yml  test_and_deploy.yml
.napari/: DESCRIPTION.md  config.yml
_sources/: about.rst.txt  description.rst.txt  developers.rst.txt  index.rst.txt
docs/: conf.py  developers.rst  guide.rst  help.rst  index.rst  quickstart.rst
napari_stracking/: __init__.py  _dock_widget.py  _export_plugin.py  _pipeline_plugin.py  _reader_plugin.py  _scale_plugin.py  _sdetection_plugins.py  _sdetection_workers.py  _sfeatures_plugins.py  _sfeatures_workers.py  _slinking_plugins.py  _slinking_workers.py  _splugin.py  _sproperties_plugins.py  _sproperties_workers.py  _strackfilter_plugins.py  _strackfilter_workers.py  _swidgets.py
napari_stracking/_tests/: test_dock_widget.py
