[metadata]
name = napari-stracking
version = 0.1.2
author = Sylvain Prigent
author_email = sylvain.prigent@inria.fr
license = GPL-3.0-only
url = https://github.com/sylvainprigent/napari-stracking
description = Linking and tracks analysis
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/sylvainprigent/napari-stracking/issues
    Documentation = https://github.com/sylvainprigent/napari-stracking#README.md
    Source Code = https://github.com/sylvainprigent/napari-stracking
    User Support = https://github.com/sylvainprigent/napari-stracking/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    stracking>=0.1.2


[options.entry_points] 
napari.plugin = 
    napari-stracking = napari_stracking
