[metadata]
name = napari-stracking
version = 0.1.10
author = Sylvain Prigent
author_email = sylvain.prigent@inria.fr
license = BSD 3-Clause
url = https://github.com/sylvainprigent/napari-stracking
description = Linking and tracks analysis
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/sylvainprigent/napari-stracking/issues
    Documentation = https://github.com/sylvainprigent/napari-stracking#README.md
    Source Code = https://github.com/sylvainprigent/napari-stracking
    User Support = https://github.com/sylvainprigent/napari-stracking/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari
    napari-plugin-engine>=0.1.4
    numpy
    stracking>=0.1.10


[options.entry_points] 
napari.plugin = 
    napari-stracking = napari_stracking
